// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uniswap.strategy getLpTokenBalances should return token balances of the vault 1`] = `
VaultTokenBalance {
  "chain": "ethereum",
  "id": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
  "tokenBalances": Array [
    Object {
      "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
      "balance": 4.8405453455057326e-11,
      "decimals": 18,
      "name": "Badger",
      "symbol": "BADGER",
      "value": 6.498916180875996e-7,
    },
    Object {
      "address": "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599",
      "balance": 0.009681090691011465,
      "decimals": 8,
      "name": "Wrapped BTC",
      "symbol": "WBTC",
      "value": 85.1935980809009,
    },
  ],
  "vault": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
}
`;

exports[`uniswap.strategy getOnChainLiquidityPrice resolves missing token price based on a known token0 price 1`] = `
Object {
  "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  "price": 537039.9999999999,
}
`;

exports[`uniswap.strategy getOnChainLiquidityPrice resolves missing token price based on a known token1 price 1`] = `
Object {
  "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  "price": 0.0017599999999999998,
}
`;

exports[`uniswap.strategy resolveTokenPrice scales unknown token price by the known token price based on uniswap invariants 1`] = `
Object {
  "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  "price": 1759999999999.9998,
}
`;
